--- a/mydos/Makefile
+++ b/mydos/Makefile
@@ -11,7 +11,7 @@ CC=gcc
 MAKE=make
 
 dos=$(shell basename $$(realpath .))
-
+dos=gecOS
 # Build the OS and an example user program.
 
 # Link all objects needed by the OS.
